[package]
name = "metrology_insight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
memmap2 = "0.9.5"
ndarray = "0.16.1"
nix = "0.26.0"
num-complex = "0.4.6"
rand = "0.8.5"
signal-hook = "0.3.17"
spin_sleep = "1.2.1"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.5.38", features = ["derive"] }
eframe = { version = "0.31", features = ["glow"] }  # o "wgpu" si prefieres
egui_plot = "0.32.1"

[profile.release]
#lto = true
#panic = "abort"
